--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Yerko Rojas</title>
+    <title>Curriculum Vitae Yerko Rojas V2 </title>
 
     <link rel="shortcut icon" href="/assets/favicon_io/favicon-2.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon_io/favicon-2.ico" type="image/x-icon">
