agregando etiquetas html para distribuir contenido

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
 
     <!-- el contenido debe estar acá-->
-
+<main>
+    <header>
     <h1> Curriculum Vitae</h1>
 
     <img src="assets/imgs/YerkoCV1.png" alt="Imagen Curriculum Yerko" style="width:200px; height:200px;">
@@ -30,11 +31,9 @@
 
     <a href="https://www.behance.net/yerkorojas5cc1"> <img src="assets/imgs/BehanceLogo.png" alt="Enlace Behance Yerko"
             style="width:90px; height:50px;"></a>
-
+        </header>
     <br>
-
-    </p>
-
+<section>
     <h2>Yerko Andrés Rojas Rivera</h2>
 
     <br>
@@ -45,9 +44,9 @@
         Si bien estudié dos años Derecho al salir de cuarto medio (2010), tras un año solo trabajando y preparando PSU
         ingresé a Publicidad en la ciudad de Viña del Mar donde terminé el 2017. De ahí a la fecha he estado trabajando
         ligado al Marketing Digital tanto en agencias como en el marketing interno de empresas. </p>
-
+    </section>
     <br>
-
+<section></section>
     <h3>Datos personales</h3>
     <ul>
 
@@ -58,9 +57,9 @@
         <li>Fecha de nacimiento: 12 / Febrero / 1993 </li>
 
     </ul>
-
+</section>
     <br>
-
+<section>
     <h3>Formación</h3>
 
     <ul>
@@ -75,9 +74,9 @@
         <p>Marzo 2011 - Diciembre 2012 (incompleto)</p>
 
     </ul>
-
+</section>
     <br>
-
+<section>
     <h3>Experiencia laboral</h3>
 
     <ol>
@@ -104,10 +103,10 @@
 
     </ol>
 
-
+</section>
+</main>
     <h3><a href="portafolio.html"> Revisa mi portafolio </a>
     </h3>
-
 
 </body>
 
